--- a/src/main/resources/de/geobe/energy/config/sampleConfig.cfg
+++ b/src/main/resources/de/geobe/energy/config/sampleConfig.cfg
@@ -1,6 +1,6 @@
 domainbase = 'https://s10.e3dc.com/s10/index.php'
 portal = 'Portal'
-deviceId = '732024000257'
+deviceId = '1234567890'
 s10site {
     login {
         url = domainbase
@@ -27,4 +27,10 @@ s10site {
         timestampId = 'IDLASTTS'
         logoutId = 'HIDEME'
     }
+}
+hpcapi {
+    protocol = 'http'
+    host = '192.168.1.3'
+    port = 4567
+    path = '/state'
 }
